# fosstoon

./: .gitignore  Cargo.toml  README.md  index.html  links  package-lock.json  package.json  styles.css  styles.scss  tsconfig.json
src/: app.css  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  image_handler.rs  lib.rs  main.rs  store.rs
src-tauri/src/webtoon_handler/: creator.rs  episodes.rs  mod.rs  webtoon.rs
src/components/: ToastManager.svelte  mod.rs
src/components/alert/: alert.css  alert.css.map  alert.scss  mod.rs
src/components/spinner/: mod.rs  spinner.scss
src/components/waiting_screen/: mod.rs  waiting_screen.scss
src/components/webtoon/: mod.rs  webtoon.scss
src/lib/: types.ts
src/lib/stores/: toast.svelte.ts
src/routes/: +layout.svelte  +page.svelte  mod.rs
src/routes/creator/: creator.scss  mod.rs
src/routes/episode/: episode.scss  mod.rs
src/routes/home/: home.css  home.css.map  home.scss  mod.rs
src/routes/webtoon/: mod.rs  wt.scss
src/utility/: mod.rs  store.rs  types.rs
webtoon_sdk/: Cargo.toml
webtoon_sdk/src/: episodes.rs  image_dl.rs  lib.rs  recommandations.rs  search.rs  webtoon.rs
