[package]
name = "fosstoon-ui"
version = "0.1.0"
description = "An webtoon alternative client"
authors = ["Ilingu"]
license = "MIT"
repository = "https://github.com/Ilingu/fosstoon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# leptos
leptos = { version = "0.8.6", features = ["csr"] }
leptos_router = "0.8.5"
leptos_icons = "0.7.0"
leptos_meta = "0.8.5"

# Wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

# Parser
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[workspace]
members = ["src-tauri"]
