[package]
name = "fosstoon"
version = "0.1.0"
description = "An webtoon alternative client"
authors = ["Ilingu"]
license = "MIT"
repository = "https://github.com/Ilingu/fosstoon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fosstoon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

# Parser
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async rust
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"

# App's crate
webtoon = "0.9.0"
webtoon_sdk = {path = "../webtoon_sdk"}
async-trait = "0.1.89"
nanorand = "0.8.0"
