[package]
name = "webtoon_sdk"
version = "0.1.0"
description = "A webtoon interface"
authors = ["Ilingu"]
license = "MIT"
repository = "https://github.com/Ilingu/fosstoon"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19" }
tokio = { version = "1", features = ["full"] }
scraper = "0.24.0"
serde = { version = "1", features = ["derive"] }
