[package]
name = "webtoon_sdk"
version = "0.1.0"
description = "A webtoon interface"
authors = ["Ilingu"]
license = "MIT"
repository = "https://github.com/Ilingu/fosstoon"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", default-features = false, features = ["rustls-tls", "http2", "charset"] } # rustls-tls for android compilation
scraper = "0.24.0"

tokio = { version = "1", features = ["full"] }
futures = "0.3.31"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

nanorand = "0.8.0"